# monad_rust

./: .gitignore  STRATEGY.md  package-lock.json  package.json
.github/: copilot-instructions.md
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: FlashArbitrage.sol
contracts/src/interfaces/: IUniswapV2Callee.sol
contracts/test/: FlashArbitrage.t.sol
monad-bot/: .env.example  .gitignore  Cargo.toml  README.md  STRATEGY.md  positions.json
monad-bot/examples/: check_token.rs  panic_sell.rs
monad-bot/src/: config.rs  main.rs  telegram.rs  trade_history.rs
monad-bot/src/arbitrage/: executor.rs  kuru.rs  mod.rs  octoswap.rs  scanner.rs  zkswap.rs
monad-bot/src/executor/: gas.rs  mod.rs  sdk_executor.rs  sell.rs  swap.rs
monad-bot/src/handlers/: mod.rs  sell_handler.rs
monad-bot/src/listeners/: mempool.rs  mod.rs  nadfun.rs  sdk_stream.rs
monad-bot/src/position/: mod.rs  tracker.rs  trailing_sl.rs
monad-bot/src/rpc/: executor.rs  mod.rs  provider.rs
monad-bot/src/strategies/: mod.rs  sniper.rs
monad-bot/src/streams/: mod.rs  webhook.rs
monad-bot/src/validators/: bundling.rs  honeypot.rs  liquidity.rs  mod.rs  token_analysis.rs  wallet_tracker.rs
