[package]
name = "monad-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0", features = ["full"] }
anyhow = "1.0"
axum = "0.7"
chrono = "0.4.34"
clap = { version = "4.2", features = ["derive"] }
dotenvy = "0.15"
futures-util = "0.3"
lazy_static = "1.5.0"
nadfun_sdk = "0.3.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd-sys = "2.0.16"

[dependencies.monad-exec-events]
git = "https://github.com/category-labs/monad-bft"
tag = "release/exec-events-sdk-v1.0"

[dependencies.monad-event-ring]
git = "https://github.com/category-labs/monad-bft"
tag = "release/exec-events-sdk-v1.0"


